// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render selector 1`] = `
<div>
  <div
    class="signInPage"
  >
    <div
      class="backgroundImage"
    />
    <div
      class="contents"
    >
      <p
        class="mission"
      >
        Detect cancer early, when it can be cured.
      </p>
      <div
        class="sign-in"
      >
        <button
          class=""
          data-testid="sign-in-button"
          tabindex="0"
          type="button"
        >
          <span>
            Sign In
          </span>
          <span
            class=""
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`render selector with child 1`] = `
<div>
  <div
    class="signInPage"
  >
    <div
      class="backgroundImage"
    />
    <div
      class="contents"
    >
      <p
        class="mission"
      >
        Detect cancer early, when it can be cured.
      </p>
      <div
        class="sign-in"
      >
        <button
          class=""
          data-testid="sign-in-button"
          tabindex="0"
          type="button"
        >
          <span>
            Sign In
          </span>
          <span
            class=""
          />
        </button>
      </div>
      <div
        data-testid="test-child-element"
      />
    </div>
  </div>
</div>
`;
